tests/ui/fail/repeated_skip.stderr
error: Multiple #[skip] attributes on a single field
  --> tests/ui/fail/repeated_skip.rs:11:5
   |
11 | /     #[skip]
12 | |     #[skip]
13 | |     b: String,
   | |_____________^

error: Multiple #[skip] attributes on a single field
  --> tests/ui/fail/repeated_skip.rs:19:5
   |
19 | /     #[skip]
20 | |     #[skip]
21 | |     String,
   | |__________^
